[UTE_HUB - 93] Add MyDocument Page
