# backend/UteLearningHub.Application/Features/Document/Queries/GetMyDocuments/GetMyDocumentsHandler.cs
@@ -118,6 +118,7 @@ public class GetMyDocumentsHandler : IRequestHandler<GetMyDocumentsQuery, PagedR
                     Id = dt.Tag.Id,
                     TagName = dt.Tag.TagName
                 }).ToList(),
+                FileMimeType = d.File != null ? d.File.MimeType : null,
                 FileCount = d.FileId != Guid.Empty ? 1 : 0,
                 CommentCount = d.Comments.Count,
                 CreatedById = d.CreatedById,
