# frontend/openapi/database_api_service.json
@@ -4860,6 +4860,14 @@
               "$ref": "#/components/schemas/TagDto"
             }
           },
+          "fileMimeType": {
+            "type": "string",
+            "nullable": true
+          },
+          "thumbnailUrl": {
+            "type": "string",
+            "nullable": true
+          },
           "fileCount": {
             "type": "integer",
             "format": "int32"
